--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
   <div class="shape"></div>
   <div class="shape"></div>
 </div>
-<p>home works!
+<p>What do you want to do?
 
   <a routerLink="/login">Login</a>
   <a routerLink="/register"> Register</a>
