websockets and rabbit

--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -9,6 +9,9 @@
   <button class="button" (click)="onLogout()">Log Out</button>
 </ul>
 
+<ul>
+  <button class="button" (click)="onChat()">Live Chat</button>
+</ul>
 
 
 
