--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -8,6 +8,9 @@
 <ul>
   <button class="button" (click)="onLogout()">Log Out</button>
 </ul>
+<ul>
+  <button class="button" (click)="onChat()">Live Chat</button>
+</ul>
 <div class="parent">
 <div class="child">
   <form>
